--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version></version>
+            <version>7.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
